crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_concurrency.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.mismatch

  × tipo incompatível: esperado `tupla (action_name, args) para fork!`,
  │ encontrado `Grouping { inner: Spanned { node: Ident { name:
  │ "tarefa_pesada" }, span: Span { offset: 223, line: 9, col: 11, len:
  │ 13 } } }`
    ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_concurrency.kata:9:10]
  8 │     echo!("Iniciando Main Thread")
  9 │     fork!(tarefa_pesada)
    ·          ───────┬──────
    ·                 ╰── tipos incompatíveis
 10 │     echo!("Fim da Main Thread")
    ╰────
