crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_csp_syntax.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``)``, encontrado `rx`
    ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_csp_syntax.kata:9:13]
  8 │     match channel!()
  9 │         (tx rx):
    ·             ─┬
    ·              ╰── token inesperado
 10 │             # Faz fork da corrotina worker passando a ponta de envio
    ╰────
