crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_curr.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.unbound_name

  × nome `$` não está no escopo
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_curr.kata:5:14]
 4 │     # 1. Aplicação explícita para desambiguar tuplas
 5 │     let a := $(+ 10 20)
   ·              ─
 6 │     
   ╰────
  help: você quis dizer `*`, `+`, `-`?
