crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_debug.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `expression`, encontrado `;`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_debug.kata:5:27]
 4 │ action main
 5 │     let v_linha := {1 2 3 ;}
   ·                           ┬
   ·                           ╰── token inesperado
 6 │     let v_coluna := {4 ; 5 ; 6}
   ╰────
