crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_e2e_fase5.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado ``:` após pattern do braço`, encontrado `3`
    ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_e2e_fase5.kata:12:17]
 11 │         match cont
 12 │             = _ 3: continue
    ·                 ─
 13 │             > _ 5: break
    ╰────
