crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_e2e_iterables.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.no_overload

  × nenhuma sobrecarga compatível para `echo` com os argumentos fornecidos
    ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_e2e_iterables.kata:26:9]
 25 │     for x in []
 26 │         echo!(x)
    ·         ───┬───
    ·            ╰── nenhuma sobrecarga compatível
 27 │ 
    ╰────
