crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_enum_print.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: parse.unexpected_token

  × token inesperado: esperado `variant name`, encontrado `|`
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_enum_print.kata:2:5]
 1 │ enum TestEnum
 2 │     | A(< _ 10)
   ·     ─
 3 │     | B
   ╰────
