crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_fail.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.unbound_name

  × nome `False` não está no escopo
   ╭─[/home/arthur/workspace/Kata5/crates/kata-driver/../../examples/legacy/test_fail.kata:2:13]
 1 │ @test("Teste") action main()
 2 │     assert!(False "Forçando erro")
   ·             ─────
   ╰────
