crates/kata-driver/tests/snapshots/examples_snapshot__snapshot_exemplos_kata@legacy__test_fallback_simple.snap
---
source: crates/kata-driver/tests/examples_snapshot.rs
expression: output
---
--- stderr ---
Error: type.mismatch

  × tipo incompatível: esperado `ultima variante de Result unitaria (cauda do
  │ fallback)`, encontrado `Result::Err com payload`
